--- a/PartC/Question2/mockup/src/MenuBar.module.css
+++ b/PartC/Question2/mockup/src/MenuBar.module.css
@@ -1,138 +1,23 @@
-.container {
-  max-width: 1050px;
-  width: 90%;
-  margin: auto;
+.menubar {
+  background-color: rgb(59, 32, 198);
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
-.navbar {
-  width: 100%;
-  box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
+.toolbar {
+  padding: 0;
 }
 
-.navContainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 62px;
+.drawer {
+  background-color: rgb(59, 32, 198);
+  width: 300px;
+  color: white;
 }
 
-.navbar .menuItems {
-  display: flex;
+.listGroup {
+  padding: 0;
 }
 
-.navbar .navContainer li {
-  list-style: none;
-}
-
-.navbar .navContainer a {
-  text-decoration: none;
-  color: #0e2431;
-  font-weight: 500;
-  font-size: 1.2rem;
-  padding: 0.7rem;
-}
-
-.navbar .navContainer a:hover{
-    font-weight: bolder;
-}
-
-.navContainer {
-  display: block;
-  position: relative;
-  height: 60px;
-}
-
-.navContainer .checkbox {
-  position: absolute;
-  display: block;
-  height: 32px;
-  width: 32px;
-  top: 20px;
-  left: 20px;
-  z-index: 5;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.navContainer .hamburgerLines {
-  display: block;
-  height: 26px;
-  width: 32px;
-  position: absolute;
-  top: 17px;
-  left: 20px;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.navContainer .hamburgerLines .line {
-  display: block;
-  height: 4px;
-  width: 100%;
-  border-radius: 10px;
-  background: #0e2431;
-}
-
-.navContainer .hamburgerLines .line1 {
-  transform-origin: 0% 0%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.navContainer .hamburgerLines .line2 {
-  transition: transform 0.2s ease-in-out;
-}
-
-.navContainer .hamburgerLines .line3 {
-  transform-origin: 0% 100%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.navbar .menuItems {
-  padding-top: 120px;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-  height: 100vh;
-  width: 100%;
-  transform: translate(-150%);
-  display: flex;
-  flex-direction: column;
-  margin-left: -40px;
-  padding-left: 50px;
-  transition: transform 0.5s ease-in-out;
-  text-align: center;
-}
-
-.navbar .menuItems li {
-  margin-bottom: 1.2rem;
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.logo {
-  position: absolute;
-  top: 5px;
-  right: 15px;
-  font-size: 1.2rem;
-  color: #0e2431;
-}
-
-.navContainer input[type="checkbox"]:checked ~ .menuItems {
-  transform: translateX(0);
-}
-
-.navContainer input[type="checkbox"]:checked ~ .hamburgerLines .line1 {
-  transform: rotate(45deg);
-}
-
-.navContainer input[type="checkbox"]:checked ~ .hamburgerLines .line2 {
-  transform: scaleY(0);
-}
-
-.navContainer input[type="checkbox"]:checked ~ .hamburgerLines .line3 {
-  transform: rotate(-45deg);
-}
-
-.navContainer input[type="checkbox"]:checked ~ .logo{
-  display: none;
+.listGroup span {
+  font-weight: bold;
 }
